tests/black_test/program/Error/test_ZeroDivError.tree
# 测试除零错误
# 输出：ZeroDivError
a := 0
print(1 / a)
